--- a/index.html
+++ b/index.html
@@ -3,8 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>sampath</title>
+
 </head>
 <body>
-<h1>chulaka sampath</h1>
+<header>
+    <div>
+        <img src="Assests/Images/logo-color.png" title="logo"alt="my logo" width="100px" height="100px">
+    </div>
+    <div>
+        <nav>
+           <a href="">Home</a>
+           <a href="">About</a>
+           <a href="">Projects</a>
+           <a href="">Skills</a>
+           <a href="">Gallery</a>
+           <a href="">Contact</a>
+        </nav>
+    </div>
+</header>
+<section id="home">
+    <div>
+             <h2>Hello It's Me</h2>
+             <h1>Chulaka sampath</h1>
+             <h4>I'm a FULLSTACK DEVELOPER</h4>
+             <h5>From Ambalangoda,Sri lanka</h5>
+    </div>
+    <div>
+        <img src="Assests/Images/IMG_6223.jpg" title="my profile"alt="my picture" height="200px" width="150px">
+    </div>
+    <div>
+        <button>Download CV</button>
+    </div>
+</section>
+<footer>
+    <section>
+
+    </section>
+</footer>
 </body>
 </html>
