--- a/index.html
+++ b/index.html
@@ -35,9 +35,35 @@
         <button>Download CV</button>
     </div>
 </section>
+<section id="About">
+
+</section>
 <footer>
     <section>
-
+        <div>
+          <h2>Contact Me</h2>
+        </div>
+        <div>
+           <h5>Whatsapp</h5><p> +94716811003</p>
+           <h5>Tel</h5><p> +94716811003</p>
+        </div>
+        <div>
+         <h5>Find Me</h5>
+            <p>FaceBook</p><a href="">chulaka sampath</a>
+            <p>LinkedIn</p><a href="">chulaka sampath</a>
+            <p>Github</p><a href="">chulakasam</a>
+        </div>
+        <div>
+            <img src="Assests/Icons/whatsapp.png" title="" alt="Whatsapp">
+            <img src="Assests/Icons/linkin.png" title="" alt="LinkedIn">
+            <img src="Assests/Icons/icons8-facebook-48.png" title="" alt="FaceBook">
+        </div>
+        <div>
+            <img src="Assests/Images/logo-color.png"  title="logo" alt="logo" width="100px" height="100px">
+        </div>
+        <div>
+            <p>All Rights Reserved -2024 Developed by chulaka sampath </p>
+        </div>
     </section>
 </footer>
 </body>
