--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 </head>
 <body>
+
 <header>
     <div>
         <img src="Assests/Images/logo-color.png" title="logo"alt="my logo" width="100px" height="100px">
@@ -21,6 +22,7 @@
         </nav>
     </div>
 </header>
+
 <section id="home">
     <div>
              <h2>Hello It's Me</h2>
@@ -35,9 +37,35 @@
         <button>Download CV</button>
     </div>
 </section>
-<section id="About">
 
+<section id="About">
+        <div>
+            <h2>About Me</h2>
+        </div>
+        <div>
+           <img src="Assests/Images/IMG_6223.jpg" title="" alt=""  height="200px"width="150px">
+       </div>
+        <div>
+             <p>FULLSTACK DEVELOPER</p>
+             <p>A Software Engineering Student Of IJSE <br>
+                Institute Of Software Engineering
+             </p>
+        </div>
+        <div>
+            <h4>Educational Qualification</h4>
+            <p>Passed the G.C.E .Ordinary Level Examination.</p>
+            <p>Passed the G.C.E .Advanced Level Examination.</p>
+        </div>
+        <div>
+            <h4>Professional Qualifications</h4>
+            <p>Followed a diploma in english in ICBT campus.</p>
+            <p>Following a Graduated Diploma in Software Engineering in IJSE.</p>
+        </div>
+        <div>
+            <img src="Assests/Images/pngegg.png" title="picture "alt="qualification" height="150px" width="150px">
+        </div>
 </section>
+
 <footer>
     <section>
         <div>
