--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>sampath</title>
-
 </head>
 <body>
 
@@ -64,6 +63,31 @@
         <div>
             <img src="Assests/Images/pngegg.png" title="picture "alt="qualification" height="150px" width="150px">
         </div>
+</section>
+
+<section id="projects">
+    <div>
+        <h2>My Projects</h2>
+        <hr>
+    </div>
+    <div>
+        <img src="Assests/Icons/project%20one.png"  title="project" alt="projects">
+        <h4>System Developments</h4>
+        <p>Here you can see my every system developments.</p>
+        <button>See More-></button>
+    </div>
+    <div>
+        <img src="Assests/Icons/asssignment.png"  title="Assignments" alt="Assignments">
+        <h4>Assignments</h4>
+        <p>Here you can see my assignments in Internet Technology module.</p>
+        <button>See More-></button>
+    </div>
+    <div>
+        <img src="Assests/Icons/others.png"  title="others" alt="others">
+        <h4>Others</h4>
+        <p>Here you can see my other tasks .</p>
+        <button>See More-></button>
+    </div>
 </section>
 
 <footer>
