Skills And Gallery

--- a/index.html
+++ b/index.html
@@ -90,6 +90,51 @@
     </div>
 </section>
 
+<section id="Skills">
+    <div>
+        <h2>My Skills</h2>
+        <hr>
+    </div>
+    <div>
+        <img src="Assests/Images/java-logo-1.png" title="" alt="" width="150px" height="150px">
+        <img src="Assests/Images/MySQL-Logo-500x313.png" title="" alt="" width= "150px" height="150px">
+        <img src="Assests/Images/html_5.png" title="" alt="" width="150px" height="150px">
+        <img src="Assests/Images/css%20down.png" title="" alt="" width="150px" height="150px">
+    </div>
+    <div>
+        <p>
+            I showcase the skills utilized in crafting my projects . Each endeavor sees the application of these languages in its development .
+        </p>
+    </div>
+</section>
+
+<section id="Gallery">
+    <div>
+        <h2>Gallery</h2>
+        <hr>
+    </div>
+    <div>
+        <img src="Assests/Images/WhatsApp%20Image%202024-02-26%20at%2015.39.44.jpeg" title="pic1" alt="picture1" width="350px" height="250px">
+        <p>GDSE 67 & 68 Innovesta Competition Award Ceramony</p>
+        <button>More Details</button>
+    </div>
+    <div>
+        <img src="Assests/Images/WhatsApp%20Image%202024-02-26%20at%2015.40.09.jpeg" title="pic2" alt="picture2" width="350px" height="250px">
+        <p>Techverse Solutions our team members</p>
+        <button>More Details</button>
+    </div>
+    <div>
+        <img src="Assests/Images/IMG-20230419-WA0080.jpg" title="pic3" alt="picture3" width="350px" height="250px">
+        <p>Fresher's night 2023 Enjoyable Moments</p>
+        <button>More Details</button>
+    </div>
+    <div>
+        <img src="Assests/Images/WhatsApp%20Image%202024-02-26%20at%2019.41.49.jpeg" title="pic4" alt="picture4" width="350px" height="250px">
+        <p>With Mr.Danuja Gereru & Miss Sachini Umayangana in Innovesta Competiton</p>
+        <button>More Details</button>
+    </div>
+</section>
+
 <footer>
     <section>
         <div>
@@ -118,5 +163,6 @@
         </div>
     </section>
 </footer>
+
 </body>
 </html>
