--- a/index.html
+++ b/index.html
@@ -135,6 +135,29 @@
     </div>
 </section>
 
+<section id="services">
+    <div>
+        <h2>Services</h2>
+        <hr>
+    </div>
+    <div>
+        <img src="Assests/Images/web-developments.png" title="web develop"alt="web develop.png" width="240px" height="180px">
+        <p>Web Development</p>
+    </div>
+    <div>
+        <img src="Assests/Images/POS-Software.jpg" title="pos system "alt="pos system.png" width="240px" height="180px">
+        <p>POS System Development</p>
+    </div>
+    <div>
+        <img src="Assests/Images/logo-design.png" title="logo design" alt="logo design.png" width="240px" height="180px">
+        <p>Logo Designing</p>
+    </div>
+    <div>
+        <img src="Assests/Images/ui%20ux%20development.jpg"  title="ui/ux design"alt="ui/ux designing.png" width="240px" height="180px">
+        <p>UI/UX Designing</p>
+    </div>
+</section>
+
 <footer>
     <section>
         <div>
