--- a/index.html
+++ b/index.html
@@ -158,6 +158,26 @@
     </div>
 </section>
 
+<section id="inquiries">
+    <div>
+        <h2>Ask Questions</h2>
+        <hr>
+    </div>
+    <div>
+        <input type="text" placeholder="First Name">
+        <input type="text" placeholder="Second Name">
+    </div>
+    <div>
+        <input type="tel" placeholder="Mobile No">
+        <input type="email" placeholder="Email Address">
+    </div>
+    <div>
+        <input type="text" placeholder="Message" size="47px">
+    </div>
+    <div>
+        <button type="submit">Submit</button>
+    </div>
+</section>
 <footer>
     <section>
         <div>
