--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="hii..! I am chulaka sampath de silva.">
+    <meta name="keywords" content="chulaka sampath software engineer fullstack developer programming">
+    <meta name="author" content="chulaka sampath">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
     <title>sampath</title>
 </head>
 <body>
@@ -143,18 +148,23 @@
     <div>
         <img src="Assests/Images/web-developments.png" title="web develop"alt="web develop.png" width="240px" height="180px">
         <p>Web Development</p>
+        <p>Crafting contemporary websites that seamlessly integrate creative flair with practicality. I possess expertise across a spectrum of programming languages and technologies, such as HTML, CSS, JavaScript empowering me to transform your digital aspirations into tangible results.</p>
     </div>
     <div>
         <img src="Assests/Images/POS-Software.jpg" title="pos system "alt="pos system.png" width="240px" height="180px">
         <p>POS System Development</p>
+        <p>Crafting POS system solutions that seamlessly integrate robust functionality with intuitive user interfaces, enhancing operational efficiency and customer satisfaction. Leveraging state-of-the-art development tools, I will engineer systems that streamline transactions, manage inventory, and optimize business operations, ensuring a seamless and delightful experience for both staff and customers alike.</p>
     </div>
     <div>
         <img src="Assests/Images/logo-design.png" title="logo design" alt="logo design.png" width="240px" height="180px">
         <p>Logo Designing</p>
+        <p>Empower your brand's voice with a logo that speaks volumes. Leveraging cutting-edge design tools and techniques, I will craft logos that are distinctive, visually appealing, and succinctly embody your brand essence. Elevate your brand presence with a memorable mark that leaves a lasting impression.</p>
     </div>
     <div>
         <img src="Assests/Images/ui%20ux%20development.jpg"  title="ui/ux design"alt="ui/ux designing.png" width="240px" height="180px">
         <p>UI/UX Designing</p>
+        <p>Crafting user experiences that are both intuitive and visually captivating, leaving an indelible mark on your audience. Utilizing the latest design tools, I will produce designs that are not only functional but also aesthetically pleasing, captivating your audience and enhancing their engagement and delight.
+        </p>
     </div>
 </section>
 
