--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
            <a href="">Projects</a>
            <a href="">Skills</a>
            <a href="">Gallery</a>
-           <a href="">Contact</a>
+           <a href="">Services</a>
+            <a href="">Contact</a>
         </nav>
     </div>
 </header>
